syntax = "proto3";

package com.kohan.proto.file.v1;

message UploadFileInfo{
  string fileName = 1;
  string extension = 2;
  string roomId = 3;
  string userId = 4;
  int64 totalSize = 5;
}

message UploadLargeFile{
  oneof data{
    bytes chunk = 1;
    UploadFileInfo info = 2;
  }
}

message UploadProfile{
  bytes fileContent = 1;
  string userId = 2;
  optional int32 totalSize = 3;
}

message UploadFileDTO {
  optional string fileId = 1;
  optional string message = 2;
  optional int64 received = 3;
  optional int64 total = 4;
}

service FileUploadService {
  rpc uploadProfile(UploadProfile) returns (UploadFileDTO) {}
  rpc uploadLargeFile(stream UploadLargeFile) returns (stream UploadFileDTO) {}
  rpc uploadLargeImage(stream UploadLargeFile) returns (stream UploadFileDTO) {}
}